# breadboard

./: DEPLOYMENT-UBUNTU.md  README.md  start.bat
.claude/: settings.local.json
chatmock/: .env.example  DOCKER.md  Dockerfile  README.md  build.py  docker-compose.yml  gui.py  pyproject.toml
chatmock/chatmock/: __init__.py  app.py  cli.py  fast_mode.py  model_registry.py  oauth.py  reasoning.py  responses_api.py  routes_ollama.py  routes_openai.py  session.py  upstream.py  utils.py  version.py  websocket_routes.py
chatmock/docker/: entrypoint.sh
chatmock/tests/: test_fast_mode.py  test_models.py  test_routes.py
dashboard/: .claudeignore  next.config.ts  package-lock.json  package.json
dashboard/db/: brain.db
dashboard/src/: proxy.ts
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/lib/: auth-options.ts  chatmock-server.ts  chatmock-target.ts  db.ts  invites.ts  knowledge.ts  quartz-garden-index.ts  quartz-publish.ts  quartz-url.ts  server-auth.ts  url-link-context.ts
markdown-to-pdf-action/: package-lock.json
quartz/: quartz.config.ts  quartz.layout.ts  tsconfig.tsbuildinfo
quartz/content/: index.md
quartz/content/computer-architecture-2/: 32-bit-ripple-carry-adder.md  _index.md  associative-cache-sizing-example-with-dirty-bit.md  associativity-comparison-with-access-sequences.md  associativity-trade-offs-and-diminishing-returns.md  average-memory-access-time.md  signed-integer-representations.md  (+41 more)
quartz/public/: 404.html  index.css  index.html  index.xml  postscript.js  sitemap.xml
quartz/quartz/: build.ts
scripts/: start-quartz.ps1
(+797 files in other folders)
