[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chatmock"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.9.0",
    "certifi==2025.8.3",
    "flask==3.1.1",
    "flask-sock==0.7.0",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "requests==2.32.5",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
]

[project.optional-dependencies]
gui = [
    "Pillow==11.3.0",
    "PyInstaller==6.16.0",
    "PySide6==6.9.2",
]

[project.scripts]
chatmock = "chatmock.cli:main"

[tool.setuptools.packages.find]
include = ["chatmock*"]

[tool.setuptools.package-data]
chatmock = ["prompt.md", "prompt_gpt5_codex.md"]

[tool.setuptools.dynamic]
version = {attr = "chatmock.version.__version__"}
